@@ -1,5 +1,10 @@
 2008-10-02  Richard Hult  <richard@imendio.com>
 
+	* src/dh-window.[ch] (_dh_window_display_uri): New private
+	function that displays a URI that is known to be in the docs.
+
+2008-10-02  Richard Hult  <richard@imendio.com>
+
 	* src/dh-base.c (dh_base_get_window): New function that returns an
 	existing window on the current workspace or creates a new one.
 	(dh_base_get_window_on_current_workspace): Make this work somewhat
